--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>Create new post</h1>
+
+<%= form_with model: @post do |form| %>
+<div>
+    <%= form.label :title, "Post title:"%>
+    <%= form.text_field :title %>
+
+</div>
+<br>
+<div>
+    <%= form.label :body, "Write post"%>
+    <%= form.text_area :body %>
+</div>
+    <%= form.submit "Create" %>
+<% end %>
+
+<%=link_to "Home", posts_index_path %>
